# ArkMusic

./: README.md  删除我build-profile.json5
AppScope/: app.json5
ark_music/: build-profile.json5
ark_music/src/main/: module.json5
ark_music/src/main/ets/ark_musicability/: Ark_musicAbility.ets
ark_music/src/main/ets/pages/: Index.ets  files_manager.ets
ark_music/src/main/resources/base/element/: string.json
ark_music/src/main/resources/rawfile/webview_gui/: index.html
ark_music/src/main/resources/rawfile/webview_gui/Page_List/: index.html
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/package/buffer_to_base64/: buffer_to_base64.cpp  buffer_to_base64.h
entry/src/main/cpp/package/extract_filename/: extract_filename.cpp  extract_filename.h
entry/src/main/cpp/package/image_color_calculate/: image_color_calculate.cpp  image_color_calculate.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/background_pages/: file_process.ets  meta_process.ets  system_function.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/package/: cache_image_save.ets  file_manager.ets  hashmap_save_load.ets  system_function.ets
entry/src/main/ets/package/audio_player/: audio_player.ets  by_av_player.ets
entry/src/main/ets/pages/: Index.ets  scan.ets  start.ets  web_ui.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/rawfile/: download_dir_create.html
entry/src/main/resources/rawfile/webview_gui/: index.html  play_taskbar_index.html
(+112 files in other folders)
